# python-colordemo

./: .gitignore  CHANGELOG.md  README  README.md  color_display.py  colors.py  pyproject.toml  setup.py  showcolors.py  termcolors-demo.py  termcolors.py  terminal_query.py
colordemo/: __init__.py  __main__.py  color_display.py  colors.py  terminal_query.py
termcolors/: __init__.py  __main__.py  color_display.py  terminal_query.py
